--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+
 <title>Hamsa Sarees</title>
 
-<!-- ✅ FIXED CSP FOR GOOGLE AUTH -->
+<!-- CSP — Firebase compatible -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src
-    'self'
-    'unsafe-inline'
-    https://www.gstatic.com/firebasejs/
-    https://apis.google.com
-    https://accounts.google.com;
+  script-src 'self' 'unsafe-inline' https://www.gstatic.com https://apis.google.com https://accounts.google.com;
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
   font-src 'self' https://fonts.gstatic.com;
-  connect-src
-    'self'
+  connect-src 'self'
     https://www.googleapis.com
+    https://firestore.googleapis.com
     https://securetoken.googleapis.com
     https://identitytoolkit.googleapis.com
+    https://www.gstatic.com
     https://*.firebaseio.com
     wss://*.firebaseio.com;
-  frame-src
-    https://accounts.google.com
-    https://*.firebaseapp.com;
+  frame-src https://accounts.google.com https://*.firebaseapp.com;
   img-src 'self' https: data:;
   object-src 'none';
 ">
@@ -38,6 +33,7 @@
 
 <div class="container">
 
+  <!-- HEADER -->
   <header>
     <div class="brand">
       <div class="logo">HS</div>
@@ -48,135 +44,158 @@
     </div>
 
     <div class="actions">
+      <div id="adminBadge" class="user-badge" style="background:#7c2d12">ADMIN</div>
       <div id="userBadge" class="user-badge"></div>
-      <button id="loginBtn" class="btn-ghost">Sign in</button>
-      <a href="yourorders.html" class="btn-ghost">My Orders</a>
+
+      <button id="loginBtn" class="btn">Sign in</button>
+      <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
     </div>
   </header>
 
-  <main>
-    <h1>Products</h1>
-    <div id="productGrid" class="grid"></div>
-  </main>
+  <!-- ADMIN PANEL -->
+  <section id="adminPanel" class="card" style="display:none">
+    <h3>Admin Controls</h3>
+    <button id="addProductBtn" class="btn">➕ Add Product</button>
+  </section>
 
+  <!-- PRODUCTS -->
+  <section class="grid" id="productGrid">
+    <div class="small">Loading products…</div>
+  </section>
+
+</div>
+
+<!-- PROFILE MODAL -->
+<div class="modal" id="profileModal">
+  <div class="modal-box modal-sm">
+    <button class="close-x">✕</button>
+    <h3>User Profile</h3>
+    <div id="profileInfo" class="small"></div>
+  </div>
 </div>
 
 <!-- LOGIN MODAL -->
 <div class="modal" id="loginModal">
   <div class="modal-box modal-sm">
-    <button class="close-x" id="closeLogin">✕</button>
-    <h2>Sign in</h2>
-    <p class="small">Sign in to continue.</p>
-    <div class="mt-16">
-      <button id="googleLoginBtn" class="btn btn-full">
-        Sign in with Google
-      </button>
-    </div>
-    <p id="loginError" class="small text-danger mt-12" style="display:none"></p>
+    <button class="close-x">✕</button>
+    <h3>Sign in</h3>
+    <button id="googleLoginBtn" class="btn btn-full">Sign in with Google</button>
   </div>
 </div>
 
 <script type="module">
-(async () => {
+/* ================= CONFIG ================= */
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
-    authDomain: "hamsasarees-24738.firebaseapp.com",
-    projectId: "hamsasarees-24738",
-    storageBucket: "hamsasarees-24738.firebasestorage.app",
-    messagingSenderId: "16303342424",
-    appId: "1:16303342424:web:d68d26160d45472713db2d"
-  };
+const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93';
 
-  const { initializeApp } =
-    await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js');
-  const {
-    getAuth,
-    GoogleAuthProvider,
-    signInWithPopup,
-    signInWithRedirect,
-    getRedirectResult,
-    onAuthStateChanged
-  } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
-  const {
-    getFirestore,
-    collection,
-    getDocs
-  } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+const firebaseConfig = {
+  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+  authDomain: "hamsasarees-24738.firebaseapp.com",
+  projectId: "hamsasarees-24738",
+  storageBucket: "hamsasarees-24738.firebasestorage.app",
+  messagingSenderId: "16303342424",
+  appId: "1:16303342424:web:d68d26160d45472713db2d"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
-  const provider = new GoogleAuthProvider();
+/* ================= FIREBASE ================= */
 
-  const $ = id => document.getElementById(id);
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import {
+  getAuth,
+  GoogleAuthProvider,
+  signInWithPopup,
+  signOut,
+  onAuthStateChanged
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-  // Handle redirect result (popup blocked case)
-  try { await getRedirectResult(auth); } catch(e){}
+import {
+  getFirestore,
+  collection,
+  getDocs
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  onAuthStateChanged(auth, user => {
-    if (user) {
-      $('userBadge').style.display = 'block';
-      $('userBadge').textContent = user.displayName || user.email;
-      $('loginBtn').style.display = 'none';
-      $('loginModal').classList.remove('show');
-    } else {
-      $('userBadge').style.display = 'none';
-      $('loginBtn').style.display = 'inline-block';
-    }
-  });
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const provider = new GoogleAuthProvider();
 
-  $('loginBtn').onclick = () =>
-    $('loginModal').classList.add('show');
+/* ================= DOM ================= */
 
-  $('closeLogin').onclick = () =>
-    $('loginModal').classList.remove('show');
+const loginBtn = document.getElementById('loginBtn');
+const logoutBtn = document.getElementById('logoutBtn');
+const userBadge = document.getElementById('userBadge');
+const adminBadge = document.getElementById('adminBadge');
+const adminPanel = document.getElementById('adminPanel');
+const productGrid = document.getElementById('productGrid');
+const loginModal = document.getElementById('loginModal');
 
-  $('googleLoginBtn').onclick = async () => {
-    $('loginError').style.display = 'none';
-    try {
-      await signInWithPopup(auth, provider);
-    } catch (e) {
-      if (e.code === 'auth/popup-blocked') {
-        await signInWithRedirect(auth, provider);
-      } else {
-        $('loginError').textContent = e.message;
-        $('loginError').style.display = 'block';
-      }
-    }
-  };
+/* ================= AUTH ================= */
 
-  // Load products
-  const grid = $('productGrid');
+loginBtn.onclick = () => loginModal.classList.add('show');
+
+document.getElementById('googleLoginBtn').onclick = async () => {
+  await signInWithPopup(auth, provider);
+  loginModal.classList.remove('show');
+};
+
+logoutBtn.onclick = () => signOut(auth);
+
+onAuthStateChanged(auth, user => {
+  if (!user) {
+    loginBtn.style.display = '';
+    logoutBtn.style.display = 'none';
+    userBadge.style.display = 'none';
+    adminPanel.style.display = 'none';
+    adminBadge.style.display = 'none';
+    return;
+  }
+
+  const isAdmin = user.uid === ADMIN_UID;
+
+  userBadge.textContent = user.displayName || user.email;
+  userBadge.style.display = 'inline-block';
+
+  loginBtn.style.display = 'none';
+  logoutBtn.style.display = 'inline-block';
+
+  adminPanel.style.display = isAdmin ? 'block' : 'none';
+  adminBadge.style.display = isAdmin ? 'inline-block' : 'none';
+});
+
+/* ================= PRODUCTS ================= */
+
+async function loadProducts() {
+  productGrid.innerHTML = '';
   const snap = await getDocs(collection(db, 'products'));
-  grid.innerHTML = snap.empty
-    ? '<div class="text-muted p-16">No products</div>'
-    : '';
 
-  snap.forEach(d => {
-    const p = d.data();
-    const img = p.images?.[0] || '';
+  if (snap.empty) {
+    productGrid.innerHTML = '<div class="small">No products yet</div>';
+    return;
+  }
+
+  snap.forEach(doc => {
+    const p = doc.data();
     const card = document.createElement('div');
     card.className = 'card';
-    card.innerHTML = `
-      <div class="imgwrap"><img src="${img}"></div>
-      <div class="p-12">
-        <strong>${p.title}</strong>
-        <div class="price mt-8">₹${p.price}</div>
-        <button class="btn btn-full mt-12">Buy Now</button>
-      </div>`;
-    card.querySelector('button').onclick = () => {
-      if (!auth.currentUser) {
-        alert('Please sign in first');
-        $('loginModal').classList.add('show');
-        return;
-      }
-      location.href = 'payment.html?pid=' + d.id;
-    };
-    grid.appendChild(card);
-  });
 
-})();
+    card.innerHTML = `
+      <div class="imgwrap">
+        <img src="${p.images?.[0] || ''}">
+      </div>
+      <strong>${p.name}</strong>
+      <div class="price">₹${p.price}</div>
+    `;
+
+    productGrid.appendChild(card);
+  });
+}
+
+loadProducts();
+
+/* ================= MODALS ================= */
+document.querySelectorAll('.close-x').forEach(b =>
+  b.onclick = () => b.closest('.modal').classList.remove('show')
+);
 </script>
 
 </body>
