--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Hamsa Sarees</title>
 
-<!-- CSP — Firebase compatible -->
+<!-- CSP (Firebase-safe) -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.gstatic.com https://apis.google.com https://accounts.google.com;
@@ -25,165 +24,196 @@
   object-src 'none';
 ">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
 <div class="container">
 
-  <!-- HEADER -->
-  <header>
-    <div class="brand">
-      <div class="logo">HS</div>
-      <div>
-        <div class="title">Hamsa Sarees</div>
-        <div class="small">Handpicked • Ethnic • Quality</div>
-      </div>
+<header>
+  <div class="brand">
+    <div class="logo">HS</div>
+    <div>
+      <div class="title">Hamsa Sarees</div>
+      <div class="small">Handpicked • Ethnic • Quality</div>
     </div>
-
-    <div class="actions">
-      <div id="adminBadge" class="user-badge" style="background:#7c2d12">ADMIN</div>
-      <div id="userBadge" class="user-badge"></div>
-
-      <button id="loginBtn" class="btn">Sign in</button>
-      <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
-    </div>
-  </header>
-
-  <!-- ADMIN PANEL -->
-  <section id="adminPanel" class="card" style="display:none">
-    <h3>Admin Controls</h3>
-    <button id="addProductBtn" class="btn">➕ Add Product</button>
-  </section>
-
-  <!-- PRODUCTS -->
-  <section class="grid" id="productGrid">
-    <div class="small">Loading products…</div>
-  </section>
-
-</div>
-
-<!-- PROFILE MODAL -->
-<div class="modal" id="profileModal">
-  <div class="modal-box modal-sm">
-    <button class="close-x">✕</button>
-    <h3>User Profile</h3>
-    <div id="profileInfo" class="small"></div>
   </div>
+
+  <div class="actions">
+    <div id="adminBadge" class="user-badge" style="background:#7c2d12">ADMIN</div>
+    <div id="userBadge" class="user-badge"></div>
+    <button id="loginBtn" class="btn">Sign in</button>
+    <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
+  </div>
+</header>
+
+<!-- ADMIN PANEL -->
+<section id="adminPanel" class="card" style="display:none">
+  <h3>Admin Controls</h3>
+  <button id="addProductBtn" class="btn">➕ Add Product</button>
+</section>
+
+<!-- PRODUCTS -->
+<section class="grid" id="productGrid"></section>
+
 </div>
 
-<!-- LOGIN MODAL -->
-<div class="modal" id="loginModal">
-  <div class="modal-box modal-sm">
+<!-- ADD / EDIT PRODUCT MODAL -->
+<div class="modal" id="productModal">
+  <div class="modal-box modal-scrollable">
     <button class="close-x">✕</button>
-    <h3>Sign in</h3>
-    <button id="googleLoginBtn" class="btn btn-full">Sign in with Google</button>
+    <h3 id="modalTitle">Add Product</h3>
+
+    <div class="field">
+      <label>Name</label>
+      <input id="pName">
+    </div>
+
+    <div class="field">
+      <label>Price</label>
+      <input id="pPrice" type="number">
+    </div>
+
+    <div class="field">
+      <label>Description</label>
+      <textarea id="pDesc"></textarea>
+    </div>
+
+    <div class="field">
+      <label>Images (max 6)</label>
+      <input id="pImages" type="file" accept="image/*" multiple>
+    </div>
+
+    <div class="modal-footer">
+      <button id="saveProductBtn" class="btn">Save</button>
+    </div>
   </div>
 </div>
 
 <script type="module">
 /* ================= CONFIG ================= */
+const ADMIN_UID = "EenXHJIvZpavhkGTCI8EZyFAfH93";
 
-const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93';
+/* ================= FIREBASE ================= */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import {
+  getAuth, GoogleAuthProvider, signInWithPopup,
+  signOut, onAuthStateChanged
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+import {
+  getFirestore, collection, addDoc, getDocs,
+  deleteDoc, doc, updateDoc, serverTimestamp
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+import {
+  getStorage, ref, uploadBytes, getDownloadURL
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
   authDomain: "hamsasarees-24738.firebaseapp.com",
   projectId: "hamsasarees-24738",
-  storageBucket: "hamsasarees-24738.firebasestorage.app",
+  storageBucket: "hamsasarees-24738.appspot.com",
   messagingSenderId: "16303342424",
   appId: "1:16303342424:web:d68d26160d45472713db2d"
 };
 
-/* ================= FIREBASE ================= */
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import {
-  getAuth,
-  GoogleAuthProvider,
-  signInWithPopup,
-  signOut,
-  onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-import {
-  getFirestore,
-  collection,
-  getDocs
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
+const storage = getStorage(app);
 const provider = new GoogleAuthProvider();
 
 /* ================= DOM ================= */
+const productGrid = document.getElementById("productGrid");
+const adminPanel = document.getElementById("adminPanel");
+const adminBadge = document.getElementById("adminBadge");
+const userBadge = document.getElementById("userBadge");
+const loginBtn = document.getElementById("loginBtn");
+const logoutBtn = document.getElementById("logoutBtn");
 
-const loginBtn = document.getElementById('loginBtn');
-const logoutBtn = document.getElementById('logoutBtn');
-const userBadge = document.getElementById('userBadge');
-const adminBadge = document.getElementById('adminBadge');
-const adminPanel = document.getElementById('adminPanel');
-const productGrid = document.getElementById('productGrid');
-const loginModal = document.getElementById('loginModal');
+const productModal = document.getElementById("productModal");
+const addProductBtn = document.getElementById("addProductBtn");
+const saveProductBtn = document.getElementById("saveProductBtn");
+
+const pName = document.getElementById("pName");
+const pPrice = document.getElementById("pPrice");
+const pDesc = document.getElementById("pDesc");
+const pImages = document.getElementById("pImages");
+
+let editingId = null;
 
 /* ================= AUTH ================= */
-
-loginBtn.onclick = () => loginModal.classList.add('show');
-
-document.getElementById('googleLoginBtn').onclick = async () => {
-  await signInWithPopup(auth, provider);
-  loginModal.classList.remove('show');
-};
-
+loginBtn.onclick = () => signInWithPopup(auth, provider);
 logoutBtn.onclick = () => signOut(auth);
 
 onAuthStateChanged(auth, user => {
-  if (!user) {
-    loginBtn.style.display = '';
-    logoutBtn.style.display = 'none';
-    userBadge.style.display = 'none';
-    adminPanel.style.display = 'none';
-    adminBadge.style.display = 'none';
-    return;
-  }
+  if (!user) return;
 
   const isAdmin = user.uid === ADMIN_UID;
+  userBadge.textContent = user.displayName;
+  userBadge.style.display = "inline-block";
+  loginBtn.style.display = "none";
+  logoutBtn.style.display = "inline-block";
 
-  userBadge.textContent = user.displayName || user.email;
-  userBadge.style.display = 'inline-block';
-
-  loginBtn.style.display = 'none';
-  logoutBtn.style.display = 'inline-block';
-
-  adminPanel.style.display = isAdmin ? 'block' : 'none';
-  adminBadge.style.display = isAdmin ? 'inline-block' : 'none';
+  adminPanel.style.display = isAdmin ? "block" : "none";
+  adminBadge.style.display = isAdmin ? "inline-block" : "none";
 });
 
-/* ================= PRODUCTS ================= */
+/* ================= ADMIN ================= */
+addProductBtn.onclick = () => {
+  editingId = null;
+  pName.value = pPrice.value = pDesc.value = "";
+  pImages.value = "";
+  productModal.classList.add("show");
+};
 
-async function loadProducts() {
-  productGrid.innerHTML = '';
-  const snap = await getDocs(collection(db, 'products'));
+saveProductBtn.onclick = async () => {
+  if (!pName.value || !pPrice.value) return alert("Missing fields");
 
-  if (snap.empty) {
-    productGrid.innerHTML = '<div class="small">No products yet</div>';
-    return;
+  const files = [...pImages.files].slice(0, 6);
+  const urls = [];
+
+  for (const file of files) {
+    const r = ref(storage, `products/${Date.now()}-${file.name}`);
+    await uploadBytes(r, file);
+    urls.push(await getDownloadURL(r));
   }
 
-  snap.forEach(doc => {
-    const p = doc.data();
-    const card = document.createElement('div');
-    card.className = 'card';
+  const data = {
+    name: pName.value,
+    price: Number(pPrice.value),
+    description: pDesc.value,
+    images: urls,
+    createdAt: serverTimestamp(),
+    ratingAvg: 0,
+    ratingCount: 0
+  };
+
+  await addDoc(collection(db, "products"), data);
+  productModal.classList.remove("show");
+  loadProducts();
+};
+
+/* ================= PRODUCTS ================= */
+async function loadProducts() {
+  productGrid.innerHTML = "";
+  const snap = await getDocs(collection(db, "products"));
+
+  snap.forEach(d => {
+    const p = d.data();
+    const card = document.createElement("div");
+    card.className = "card";
 
     card.innerHTML = `
       <div class="imgwrap">
-        <img src="${p.images?.[0] || ''}">
+        <img src="${p.images?.[0] || ""}">
       </div>
       <strong>${p.name}</strong>
       <div class="price">₹${p.price}</div>
+      <div class="small">⭐ ${p.ratingAvg.toFixed(1)} (${p.ratingCount})</div>
     `;
 
     productGrid.appendChild(card);
@@ -192,11 +222,10 @@ async function loadProducts() {
 
 loadProducts();
 
-/* ================= MODALS ================= */
-document.querySelectorAll('.close-x').forEach(b =>
-  b.onclick = () => b.closest('.modal').classList.remove('show')
+/* ================= MODAL CLOSE ================= */
+document.querySelectorAll(".close-x").forEach(b =>
+  b.onclick = () => b.closest(".modal").classList.remove("show")
 );
 </script>
-
 </body>
 </html>
