--- a/index.html
+++ b/index.html
@@ -1,231 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Hamsa Sarees</title>
 
-<!-- CSP (Firebase-safe) -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.gstatic.com https://apis.google.com https://accounts.google.com;
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-  font-src 'self' https://fonts.gstatic.com;
-  connect-src 'self'
+  font-src https://fonts.gstatic.com;
+  connect-src
     https://www.googleapis.com
     https://firestore.googleapis.com
     https://securetoken.googleapis.com
     https://identitytoolkit.googleapis.com
-    https://www.gstatic.com
-    https://*.firebaseio.com
-    wss://*.firebaseio.com;
-  frame-src https://accounts.google.com https://*.firebaseapp.com;
+    https://www.gstatic.com;
+  frame-src https://accounts.google.com;
   img-src 'self' https: data:;
-  object-src 'none';
 ">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+body { font-family: Inter; background:#0d1117; color:#e6edf3; margin:0 }
+.container { max-width:900px; margin:auto; padding:20px }
+.btn { padding:8px 14px; background:#238636; color:#fff; border:none; cursor:pointer }
+.btn-ghost { background:none; border:1px solid #444; color:#ccc }
+.card { background:#161b22; padding:14px; border-radius:8px; margin-bottom:12px }
+.hidden { display:none }
+</style>
 </head>
 
 <body>
 <div class="container">
 
-<header>
-  <div class="brand">
-    <div class="logo">HS</div>
-    <div>
-      <div class="title">Hamsa Sarees</div>
-      <div class="small">Handpicked • Ethnic • Quality</div>
-    </div>
-  </div>
+<h2>Hamsa Sarees</h2>
 
-  <div class="actions">
-    <div id="adminBadge" class="user-badge" style="background:#7c2d12">ADMIN</div>
-    <div id="userBadge" class="user-badge"></div>
-    <button id="loginBtn" class="btn">Sign in</button>
-    <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
-  </div>
-</header>
-
-<!-- ADMIN PANEL -->
-<section id="adminPanel" class="card" style="display:none">
-  <h3>Admin Controls</h3>
-  <button id="addProductBtn" class="btn">➕ Add Product</button>
-</section>
-
-<!-- PRODUCTS -->
-<section class="grid" id="productGrid"></section>
-
+<div id="authBar">
+  <button id="loginBtn" class="btn">Sign in</button>
+  <button id="logoutBtn" class="btn-ghost hidden">Sign out</button>
+  <span id="userInfo"></span>
 </div>
 
-<!-- ADD / EDIT PRODUCT MODAL -->
-<div class="modal" id="productModal">
-  <div class="modal-box modal-scrollable">
-    <button class="close-x">✕</button>
-    <h3 id="modalTitle">Add Product</h3>
+<hr>
 
-    <div class="field">
-      <label>Name</label>
-      <input id="pName">
-    </div>
+<div id="adminPanel" class="card hidden">
+  <h3>Admin Panel</h3>
+  <input id="pName" placeholder="Product name"><br><br>
+  <input id="pPrice" type="number" placeholder="Price"><br><br>
+  <button id="addBtn" class="btn">Add Product</button>
+</div>
 
-    <div class="field">
-      <label>Price</label>
-      <input id="pPrice" type="number">
-    </div>
+<h3>Products</h3>
+<div id="products"></div>
 
-    <div class="field">
-      <label>Description</label>
-      <textarea id="pDesc"></textarea>
-    </div>
-
-    <div class="field">
-      <label>Images (max 6)</label>
-      <input id="pImages" type="file" accept="image/*" multiple>
-    </div>
-
-    <div class="modal-footer">
-      <button id="saveProductBtn" class="btn">Save</button>
-    </div>
-  </div>
 </div>
 
 <script type="module">
-/* ================= CONFIG ================= */
-const ADMIN_UID = "EenXHJIvZpavhkGTCI8EZyFAfH93";
-
-/* ================= FIREBASE ================= */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import {
-  getAuth, GoogleAuthProvider, signInWithPopup,
-  signOut, onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged }
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc }
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-import {
-  getFirestore, collection, addDoc, getDocs,
-  deleteDoc, doc, updateDoc, serverTimestamp
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
-import {
-  getStorage, ref, uploadBytes, getDownloadURL
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+const ADMIN_UID = "EenXHJIvZpavhkGTCI8EZyFAfH93";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
   authDomain: "hamsasarees-24738.firebaseapp.com",
-  projectId: "hamsasarees-24738",
-  storageBucket: "hamsasarees-24738.appspot.com",
-  messagingSenderId: "16303342424",
-  appId: "1:16303342424:web:d68d26160d45472713db2d"
+  projectId: "hamsasarees-24738"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-const storage = getStorage(app);
 const provider = new GoogleAuthProvider();
 
-/* ================= DOM ================= */
-const productGrid = document.getElementById("productGrid");
-const adminPanel = document.getElementById("adminPanel");
-const adminBadge = document.getElementById("adminBadge");
-const userBadge = document.getElementById("userBadge");
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
+const adminPanel = document.getElementById("adminPanel");
+const productsDiv = document.getElementById("products");
+const userInfo = document.getElementById("userInfo");
 
-const productModal = document.getElementById("productModal");
-const addProductBtn = document.getElementById("addProductBtn");
-const saveProductBtn = document.getElementById("saveProductBtn");
-
-const pName = document.getElementById("pName");
-const pPrice = document.getElementById("pPrice");
-const pDesc = document.getElementById("pDesc");
-const pImages = document.getElementById("pImages");
-
-let editingId = null;
-
-/* ================= AUTH ================= */
 loginBtn.onclick = () => signInWithPopup(auth, provider);
 logoutBtn.onclick = () => signOut(auth);
 
 onAuthStateChanged(auth, user => {
-  if (!user) return;
-
-  const isAdmin = user.uid === ADMIN_UID;
-  userBadge.textContent = user.displayName;
-  userBadge.style.display = "inline-block";
-  loginBtn.style.display = "none";
-  logoutBtn.style.display = "inline-block";
-
-  adminPanel.style.display = isAdmin ? "block" : "none";
-  adminBadge.style.display = isAdmin ? "inline-block" : "none";
-});
-
-/* ================= ADMIN ================= */
-addProductBtn.onclick = () => {
-  editingId = null;
-  pName.value = pPrice.value = pDesc.value = "";
-  pImages.value = "";
-  productModal.classList.add("show");
-};
-
-saveProductBtn.onclick = async () => {
-  if (!pName.value || !pPrice.value) return alert("Missing fields");
-
-  const files = [...pImages.files].slice(0, 6);
-  const urls = [];
-
-  for (const file of files) {
-    const r = ref(storage, `products/${Date.now()}-${file.name}`);
-    await uploadBytes(r, file);
-    urls.push(await getDownloadURL(r));
+  if (!user) {
+    adminPanel.classList.add("hidden");
+    loginBtn.classList.remove("hidden");
+    logoutBtn.classList.add("hidden");
+    userInfo.textContent = "";
+    return;
   }
 
-  const data = {
-    name: pName.value,
-    price: Number(pPrice.value),
-    description: pDesc.value,
-    images: urls,
-    createdAt: serverTimestamp(),
-    ratingAvg: 0,
-    ratingCount: 0
-  };
+  userInfo.textContent = user.email;
+  loginBtn.classList.add("hidden");
+  logoutBtn.classList.remove("hidden");
 
-  await addDoc(collection(db, "products"), data);
-  productModal.classList.remove("show");
+  if (user.uid === ADMIN_UID) {
+    adminPanel.classList.remove("hidden");
+  }
+
   loadProducts();
-};
+});
 
-/* ================= PRODUCTS ================= */
 async function loadProducts() {
-  productGrid.innerHTML = "";
+  productsDiv.innerHTML = "";
   const snap = await getDocs(collection(db, "products"));
-
   snap.forEach(d => {
     const p = d.data();
-    const card = document.createElement("div");
-    card.className = "card";
-
-    card.innerHTML = `
-      <div class="imgwrap">
-        <img src="${p.images?.[0] || ""}">
-      </div>
-      <strong>${p.name}</strong>
-      <div class="price">₹${p.price}</div>
-      <div class="small">⭐ ${p.ratingAvg.toFixed(1)} (${p.ratingCount})</div>
+    const div = document.createElement("div");
+    div.className = "card";
+    div.innerHTML = `
+      <b>${p.name}</b> — ₹${p.price}
+      ${auth.currentUser?.uid === ADMIN_UID ? `<button data-id="${d.id}" class="del btn-ghost">Delete</button>` : ""}
     `;
+    productsDiv.appendChild(div);
+  });
 
-    productGrid.appendChild(card);
+  document.querySelectorAll(".del").forEach(b => {
+    b.onclick = async () => {
+      await deleteDoc(doc(db, "products", b.dataset.id));
+      loadProducts();
+    };
   });
 }
 
-loadProducts();
-
-/* ================= MODAL CLOSE ================= */
-document.querySelectorAll(".close-x").forEach(b =>
-  b.onclick = () => b.closest(".modal").classList.remove("show")
-);
+document.getElementById("addBtn").onclick = async () => {
+  const name = pName.value.trim();
+  const price = Number(pPrice.value);
+  if (!name || !price) return alert("Missing");
+  await addDoc(collection(db, "products"), { name, price });
+  pName.value = pPrice.value = "";
+  loadProducts();
+};
 </script>
+
 </body>
 </html>
