--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Hamsa Sarees</title>
+<title>Hamsa Sarees+</title>
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
