--- a/index.html
+++ b/index.html
@@ -1,68 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Hamsa Sarees+</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Hamsa Sarees</title>
 
+<!-- CSP – Google Auth + Firebase SAFE -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.gstatic.com https://apis.google.com https://accounts.google.com;
+  script-src 'self' 'unsafe-inline'
+    https://www.gstatic.com
+    https://apis.google.com
+    https://accounts.google.com;
   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
   font-src https://fonts.gstatic.com;
   connect-src
     https://www.googleapis.com
     https://firestore.googleapis.com
     https://securetoken.googleapis.com
-    https://identitytoolkit.googleapis.com
-    https://www.gstatic.com;
-  frame-src https://accounts.google.com;
+    https://identitytoolkit.googleapis.com;
+  frame-src
+    https://accounts.google.com
+    https://*.firebaseapp.com;
   img-src 'self' https: data:;
 ">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
 <style>
-body { font-family: Inter; background:#0d1117; color:#e6edf3; margin:0 }
-.container { max-width:900px; margin:auto; padding:20px }
-.btn { padding:8px 14px; background:#238636; color:#fff; border:none; cursor:pointer }
-.btn-ghost { background:none; border:1px solid #444; color:#ccc }
-.card { background:#161b22; padding:14px; border-radius:8px; margin-bottom:12px }
-.hidden { display:none }
+body{
+  margin:0;
+  font-family:Inter,system-ui;
+  background:#0d1117;
+  color:#e6edf3;
+}
+.container{max-width:1100px;margin:auto;padding:20px}
+header{
+  display:flex;justify-content:space-between;align-items:center;
+  margin-bottom:20px;
+}
+.brand{display:flex;gap:12px;align-items:center}
+.logo{
+  width:44px;height:44px;border-radius:12px;
+  background:linear-gradient(135deg,#00aaff,#4dd0e1);
+  display:flex;align-items:center;justify-content:center;
+  font-weight:800;color:#001;
+}
+.btn{
+  background:#238636;color:#fff;border:none;
+  padding:8px 14px;border-radius:8px;
+  cursor:pointer;font-weight:600;
+}
+.btn-ghost{
+  background:transparent;border:1px solid #30363d;
+  color:#c9d1d9;padding:8px 14px;border-radius:8px;
+}
+.card{
+  background:#161b22;border-radius:12px;
+  padding:16px;margin-bottom:14px;
+}
+.grid{
+  display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+  gap:14px;
+}
+input{
+  width:100%;padding:10px;border-radius:8px;
+  border:1px solid #30363d;background:#0d1117;color:#e6edf3;
+}
+.small{color:#8b949e;font-size:14px}
+.hidden{display:none}
+.error{color:#f85149;margin-top:8px}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<h2>Hamsa Sarees</h2>
+<header>
+  <div class="brand">
+    <div class="logo">HS</div>
+    <div>
+      <div style="font-weight:800">Hamsa Sarees</div>
+      <div class="small">Ethnic • Handpicked</div>
+    </div>
+  </div>
 
-<div id="authBar">
-  <button id="loginBtn" class="btn">Sign in</button>
-  <button id="logoutBtn" class="btn-ghost hidden">Sign out</button>
-  <span id="userInfo"></span>
-</div>
+  <div>
+    <span id="userEmail" class="small"></span>
+    <button id="loginBtn" class="btn">Sign in</button>
+    <button id="logoutBtn" class="btn-ghost hidden">Sign out</button>
+  </div>
+</header>
 
-<hr>
+<div id="authError" class="error"></div>
 
+<!-- ADMIN PANEL -->
 <div id="adminPanel" class="card hidden">
   <h3>Admin Panel</h3>
-  <input id="pName" placeholder="Product name"><br><br>
-  <input id="pPrice" type="number" placeholder="Price"><br><br>
-  <button id="addBtn" class="btn">Add Product</button>
+  <input id="pName" placeholder="Product name">
+  <br><br>
+  <input id="pPrice" type="number" placeholder="Price">
+  <br><br>
+  <button id="addProductBtn" class="btn">Add product</button>
 </div>
 
 <h3>Products</h3>
-<div id="products"></div>
+<div id="products" class="grid"></div>
 
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged }
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc }
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import {
+  getAuth, GoogleAuthProvider,
+  signInWithPopup, signOut, onAuthStateChanged
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import {
+  getFirestore, collection, addDoc, getDocs, deleteDoc, doc
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const ADMIN_UID = "EenXHJIvZpavhkGTCI8EZyFAfH93";
 
@@ -79,64 +134,77 @@ const provider = new GoogleAuthProvider();
 
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
+const userEmail = document.getElementById("userEmail");
 const adminPanel = document.getElementById("adminPanel");
 const productsDiv = document.getElementById("products");
-const userInfo = document.getElementById("userInfo");
+const authError = document.getElementById("authError");
 
-loginBtn.onclick = () => signInWithPopup(auth, provider);
+loginBtn.onclick = async () => {
+  authError.textContent = "";
+  try{
+    await signInWithPopup(auth, provider);
+  }catch(e){
+    authError.textContent = e.message;
+  }
+};
+
 logoutBtn.onclick = () => signOut(auth);
 
 onAuthStateChanged(auth, user => {
-  if (!user) {
-    adminPanel.classList.add("hidden");
+  productsDiv.innerHTML = "";
+  if(!user){
+    userEmail.textContent = "";
     loginBtn.classList.remove("hidden");
     logoutBtn.classList.add("hidden");
-    userInfo.textContent = "";
+    adminPanel.classList.add("hidden");
+    loadProducts(false);
     return;
   }
 
-  userInfo.textContent = user.email;
+  userEmail.textContent = user.email;
   loginBtn.classList.add("hidden");
   logoutBtn.classList.remove("hidden");
 
-  if (user.uid === ADMIN_UID) {
+  if(user.uid === ADMIN_UID){
     adminPanel.classList.remove("hidden");
   }
 
-  loadProducts();
+  loadProducts(user.uid === ADMIN_UID);
 });
 
-async function loadProducts() {
+async function loadProducts(isAdmin){
   productsDiv.innerHTML = "";
-  const snap = await getDocs(collection(db, "products"));
-  snap.forEach(d => {
+  const snap = await getDocs(collection(db,"products"));
+  snap.forEach(d=>{
     const p = d.data();
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
-      <b>${p.name}</b> — ₹${p.price}
-      ${auth.currentUser?.uid === ADMIN_UID ? `<button data-id="${d.id}" class="del btn-ghost">Delete</button>` : ""}
+    const el = document.createElement("div");
+    el.className = "card";
+    el.innerHTML = `
+      <strong>${p.name}</strong>
+      <div class="small">₹${p.price}</div>
+      ${isAdmin ? `<button data-id="${d.id}" class="btn-ghost del">Delete</button>` : ""}
     `;
-    productsDiv.appendChild(div);
+    productsDiv.appendChild(el);
   });
 
-  document.querySelectorAll(".del").forEach(b => {
-    b.onclick = async () => {
-      await deleteDoc(doc(db, "products", b.dataset.id));
-      loadProducts();
+  document.querySelectorAll(".del").forEach(b=>{
+    b.onclick = async ()=> {
+      await deleteDoc(doc(db,"products",b.dataset.id));
+      loadProducts(true);
     };
   });
 }
 
-document.getElementById("addBtn").onclick = async () => {
+document.getElementById("addProductBtn").onclick = async ()=>{
   const name = pName.value.trim();
   const price = Number(pPrice.value);
-  if (!name || !price) return alert("Missing");
-  await addDoc(collection(db, "products"), { name, price });
+  if(!name || !price) return;
+  await addDoc(collection(db,"products"),{name,price});
   pName.value = pPrice.value = "";
-  loadProducts();
+  loadProducts(true);
 };
-</script>
 
+loadProducts(false);
+</script>
 </body>
 </html>
