--- a/payment.html
+++ b/payment.html
@@ -404,6 +404,9 @@
   }
 })();
 </script>
-
+<footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
+    ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
+    Website designed, created & published by Terminal Joint.
+</footer>
 </body>
 </html>
