--- a/payment.html
+++ b/payment.html
@@ -3,131 +3,130 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Secure Payment</title>
+  <title>Hamsa Sarees — Payment</title>
 
-  <!-- FIXED CSP: Razorpay checkout was blocked earlier -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://checkout.razorpay.com https://*.razorpay.com; connect-src 'self' https://api.razorpay.com https://*.razorpay.com https://docs.google.com; img-src 'self' data: https://*.razorpay.com; style-src 'self' 'unsafe-inline'; frame-src https://checkout.razorpay.com https://*.razorpay.com;" />
+  <!-- IMPORTANT: Razorpay works only on http/https, never file:// -->
+  <!-- Minimal CSP that DEFINITELY works with Razorpay -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob:; script-src 'self' https://checkout.razorpay.com; frame-src https://checkout.razorpay.com; connect-src https://api.razorpay.com https://checkout.razorpay.com; style-src 'self' 'unsafe-inline';" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
-    body{font-family:system-ui,Arial,sans-serif;background:#0b1220;color:#eaf1ff;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
-    .card{background:#121a2b;border-radius:14px;padding:24px;max-width:420px;width:100%;box-shadow:0 10px 30px rgba(0,0,0,.35)}
-    h1{margin:0 0 12px;font-size:22px}
-    p{color:#9fb2ff;margin:0 0 18px}
-    label{display:block;margin:12px 0 6px}
-    input{width:100%;padding:10px 12px;border-radius:10px;border:1px solid #243055;background:#0b1220;color:#fff}
-    input:read-only{background:#0d1117;opacity:.7;cursor:not-allowed}
-    button{margin-top:18px;width:100%;padding:12px 14px;border-radius:12px;border:0;background:#3b82f6;color:#fff;font-weight:600;cursor:pointer}
+    body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#001f3f,#00306b);color:#eaf6ff;display:flex;align-items:center;justify-content:center;min-height:100vh}
+    .card{background:linear-gradient(180deg,#071522,#06121a);border-radius:14px;padding:24px;max-width:420px;width:100%;box-shadow:0 20px 60px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,0.05)}
+    h1{margin:0 0 6px;font-size:22px;font-weight:800}
+    .small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
+    .row{margin-bottom:12px}
+    label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
+    input{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.08);background:#0b1220;color:#fff;font-size:14px}
+    input:read-only{opacity:.7}
+    .price{font-size:20px;font-weight:800;color:#4dd0e1;margin:8px 0 14px}
+    button{width:100%;padding:14px;border-radius:12px;border:none;background:linear-gradient(90deg,#00aaff,#ff5aa3);color:#fff;font-weight:800;font-size:15px;cursor:pointer}
     button:disabled{opacity:.6;cursor:not-allowed}
-    .small{font-size:12px;color:#8aa0ff;margin-top:10px}
+    footer{margin-top:14px;text-align:center;font-size:12px;color:#9fb8d9}
   </style>
 </head>
 <body>
+
   <div class="card">
-    <h1>Secure Checkout</h1>
-    <p>Payments powered by Razorpay</p>
+    <h1>Secure Payment</h1>
+    <div class="small">Powered by Razorpay</div>
 
-    <label>Amount (INR)</label>
-    <input id="amount" type="number" readonly />
+    <div class="row">
+      <label>Product</label>
+      <input id="product" readonly />
+    </div>
 
-    <label>Name</label>
-    <input id="name" type="text" placeholder="Customer name" />
+    <div class="row">
+      <label>Amount</label>
+      <div class="price" id="priceText">₹0</div>
+    </div>
 
-    <label>Email</label>
-    <input id="email" type="email" placeholder="email@example.com" />
+    <div class="row">
+      <label>Your Name</label>
+      <input id="name" />
+    </div>
 
-    <label>Phone</label>
-    <input id="contact" type="tel" placeholder="10-digit number" />
+    <div class="row">
+      <label>Email</label>
+      <input id="email" type="email" placeholder="optional" />
+    </div>
+
+    <div class="row">
+      <label>Phone</label>
+      <input id="phone" />
+    </div>
 
     <button id="payBtn">Pay Now</button>
-    <div class="small">Do not refresh during payment</div>
+
+    <footer>Do not refresh during payment</footer>
   </div>
 
+  <!-- Razorpay checkout -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
-    const payBtn = document.getElementById('payBtn');
-    const amountInput = document.getElementById('amount');
-    const nameInput = document.getElementById('name');
-    const contactInput = document.getElementById('contact');
-    const emailInput = document.getElementById('email');
-
-    // -------- STRICT PRICE SYNC FROM MAIN PAGE --------
+    // --------- READ DATA FROM MAIN PAGE ---------
     const params = new URLSearchParams(window.location.search);
 
-    // Expecting price in RUPEES from main page
-    const priceFromMain = Number(params.get('price'));
+    const product = params.get('product') || '';
+    const price = Number(params.get('price'));
+    const nameParam = params.get('name') || '';
+    const phoneParam = params.get('phone') || '';
 
-    if (isNaN(priceFromMain) || priceFromMain <= 0) {
-      alert('Invalid or missing price. Please go back and retry.');
+    const productEl = document.getElementById('product');
+    const priceText = document.getElementById('priceText');
+    const nameEl = document.getElementById('name');
+    const phoneEl = document.getElementById('phone');
+    const emailEl = document.getElementById('email');
+    const payBtn = document.getElementById('payBtn');
+
+    // HARD BLOCK if price missing
+    if (!price || isNaN(price) || price <= 0) {
+      alert('Invalid payment link. Please place order again.');
       payBtn.disabled = true;
     } else {
-      amountInput.value = priceFromMain; // exact same value as main page
+      priceText.innerText = '₹' + price;
     }
 
-    const orderData = {
-      product: params.get('product') || '',
-      name: params.get('name') || '',
-      phone: params.get('phone') || '',
-      address: params.get('address') || '',
-      price: priceFromMain
-    };
+    productEl.value = product;
+    nameEl.value = nameParam;
+    phoneEl.value = phoneParam;
 
-    if (orderData.name) nameInput.value = orderData.name;
-    if (orderData.phone) contactInput.value = orderData.phone;
-
-    // -------- SEND TO GOOGLE FORMS AFTER PAYMENT --------
-    async function sendOrderToGoogleSheets(data, paymentId) {
-      const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse';
-      const formData = new FormData();
-
-      formData.append('entry.1128392407', data.name || '');
-      formData.append('entry.654904844', data.address || '');
-      formData.append('entry.1644126654', data.phone || '');
-      formData.append('entry.1866699911', data.product || '');
-
-      await fetch(formUrl, { method:'POST', body:formData, mode:'no-cors' });
-    }
-
+    // --------- RAZORPAY ---------
     payBtn.onclick = function () {
+      const amountPaise = Math.round(price * 100);
       payBtn.disabled = true;
-
-      const amountPaise = Math.round(Number(amountInput.value) * 100); // Razorpay needs paise
-
-      if (!amountPaise || amountPaise < 100) {
-        alert('Invalid amount');
-        payBtn.disabled = false;
-        return;
-      }
 
       const options = {
         key: 'rzp_live_Rqulhc8rZRz8Iw',
         amount: amountPaise,
         currency: 'INR',
         name: 'Hamsa Sarees',
-        description: orderData.product || 'Order Payment',
-        handler: async function (response) {
-          alert('Payment successful: ' + response.razorpay_payment_id);
-          await sendOrderToGoogleSheets(orderData, response.razorpay_payment_id);
+        description: product || 'Order Payment',
+        handler: function (response) {
+          alert('Payment successful!\nPayment ID: ' + response.razorpay_payment_id);
+          // redirect or store payment id later
         },
         prefill: {
-          name: nameInput.value.trim(),
-          email: emailInput.value.trim(),
-          contact: contactInput.value.trim()
+          name: nameEl.value,
+          email: emailEl.value,
+          contact: phoneEl.value
         },
-        notes: {
-          product: orderData.product,
-          source: 'payment.html'
-        },
-        theme: { color: '#3b82f6' }
+        theme: { color: '#00aaff' }
       };
 
-      const rzp = new Razorpay(options);
-
-      rzp.on('payment.failed', function (response) {
-        alert('Payment failed: ' + response.error.description);
+      try {
+        const rzp = new Razorpay(options);
+        rzp.on('payment.failed', function (resp) {
+          alert('Payment failed: ' + resp.error.description);
+          payBtn.disabled = false;
+        });
+        rzp.open();
+      } catch (e) {
+        console.error(e);
+        alert('Razorpay failed to load. Use HTTPS or Live Server.');
         payBtn.disabled = false;
-      });
-
-      rzp.open();
+      }
     };
   </script>
 </body>
